# GetSetGoAI

./: .env.example  .gitignore  DarkWebVPNIPs.csv  README.md  main.py  pyproject.toml  render.yaml  requirements.txt  setup.py  streamlit_app.py  technical_explanation.md  test_app.py  uv.toml
Agent/: agentic_workflow.py
Notebooks/: experiments.ipynb
config/: config.yaml
docs/: DEPLOYMENT_GUIDE.md  INTERVIEW_GUIDE.md  PROJECT_EXPLANATION.md  concepts.md
exception/: exception_handler.py  exceptions.py
prompt_library/: prompt.py
scripts/: export_plan.py
tools/: arithematic_operations_tool.py  currency_converter_tool.py  expense_calculator_tool.py  place_search_tool.py  weather_info_tool.py
utils/: config_loader.py  currency_converter.py  expense_calculator.py  model_loaders.py  place_info_search.py  save_to_document.py  weather_info.py
